--- a/html_templates/index.html
+++ b/html_templates/index.html
@@ -14,6 +14,7 @@
   <body>
     <!-- Вынести в header.html -->
     <header>
+      {% with request.resolver_match.view_name as view_name %}
 	    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
         <div class="container">
           <div 
@@ -31,17 +32,17 @@
             <ul class="nav nav-pills">
               <li class="nav-item">
                 <!-- Добавлен класс active -->              
-                <a class="nav-link active" href="index.html">
+                <a class="nav-link {% if view_name  == 'homepage:index' %}active{% endif %} href="index.html">
                   Главная
                 </a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="ice_cream_list.html">
+                <a class="nav-link {% if view_name  == 'ice_cream:ice_cream_list' %}active{% endif %}" href="ice_cream_list.html">
                   Каталог мороженого
                 </a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">
+                <a class="nav-link {% if view_name  == 'about:description' %}active{% endif %}" href="about.html">
                   О проекте
                 </a> 
               </li>
